# web-api

./: .dockerignore  .env.template  .gitattributes  .gitignore  .prettierrc  Cargo.toml  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.yaml  index.ts  package-lock.json  package.json  wrangler.toml
.github/: dependabot.yml
.sqlx/: query-13f66c14a27476857730238c8d4e70d6b7a9c1c85a226cb84f0cca0ef90f5392.json  query-2dd2301f84c890ffe8af5abc5822cf6a712213bf06aa1bf744d4ebc69636a2c2.json  query-362ffd0aaca76ea3ba4ab894b763bab3db1e7b6d54db8e3d34c4b10be5eff745.json  query-55c07d68995ecee7259be9bc1f87225c60b58dfc50b77940b65015372a94aea3.json  query-8a1a00a0c4fad4cc725ace58c4350f523f03043352e8f12bddea227190702049.json  query-9177b2a134f884daed2affb270401a6a42653170e69a81a29f995a409a2c928d.json  query-a9cc05704770e8e024c56384078daadd7ef88071719b05ade9f6b0290609cfec.json  query-aeb714ba8fea0875403dfd7167616f53df3a0eda8d9695ccd0e0e1882cd672b2.json  query-bcd98dc280b0f507d884f3c1d6c1bb82edf69954361f92be9894173d755c8d84.json  (+6 more)
cloudflare/: .gitignore  README.md  package.json  wrangler.toml
self-host/: .gitignore  Cargo.toml  Dockerfile  README.md
self-host/db/migrations/: 20231128032010_create-release-table.sql  20240707194636_seed-releases-archive.sql
self-host/scripts/: populate-sqlite.py
self-host/scripts/populate-sqlite/: index.mjs  package-lock.json  package.json
self-host/src/: fairings.rs  guards.rs  main.rs  responders.rs  util.rs
self-host/src/api/: mod.rs  models.rs  v1.rs  v2.rs
self-host/src/storage/: mod.rs  models.rs  sqlite.rs  v1.rs
(+57 files in other folders)
