[package]
name = "pcsx2-api"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"] }
dotenvy = "0.15"
cached = "0.46.1"
regex = "1.5"
lazy_static = "1.4"
